<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">仁爱护工</string>

    <string name="tab_me">首页</string>
    <string name="tab_cards">预约</string>
    <string name="tab_search">订单</string>
    <string name="tab_more">设置</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    
   
    <string name="text_tab_message">消息</string>
    <string name="text_tab_service">服务</string>
    <string name="text_tab_profile">个人</string>
    <string name="text_tab_setting">设置</string>
    <string name="text_account">个人信息</string>
    <string name="text_notification">通知与消息</string>
    <string name="text_privacy">我的账户</string>
    <string name="text_general">通用</string>
    <string name="text_about">关于仁爱护工</string>
    <string name="button_backward">返回</string>
    <string name="button_submit">提交</string>
    <string name="text_age">年龄</string>
    <string name="text_gender">性别</string>
    <string name="text_username">用户名</string>
    <string name="text_nickname">昵称</string>
    <string name="text_place">地区</string>
    <string name="text_learning">我想学/考</string>
    <string name="text_education">学历层次</string>
    <string name="text_speciality">专业</string>
    <string name="text_credit">我的积分</string>
    <string name="text_official_website">官方网站</string>
    <string name="text_rate_app">去评分</string>
    <string name="text_about_help">帮助</string>
    <string name="text_about_feedback">反馈</string>
    <string name="text_about_update">检查更新</string>
    <string name="text_company">仁爱护工 版权所有 由武汉快点科技提供技术支持</string>
    <string name="text_copyright">Copyright &#169; 2014-2020 Shizhenbao All Rights Reserved.</string>
    <string name="text_exit">退&#160;出</string>
    
</resources>