<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/backgroung2">

    <LinearLayout
        android:id="@+id/layout_CONTENT"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroung2"
        android:orientation="vertical"
        android:padding="@dimen/content_padding" >

        <LinearLayout
            android:id="@+id/layout_TABLE1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    android:id="@+id/personalsetting"
                    style="@style/text_black_18"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_account"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_account" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:orientation="vertical"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_notification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_notification"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_notification" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_privacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:layout_marginBottom="@dimen/row_margin"
                android:layout_marginTop="@dimen/row_margin"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    android:id="@+id/myAccount"
                    style="@style/text_black_18"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_privacy"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_privacy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_general"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_general"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_general" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <RelativeLayout
                android:id="@+id/layout_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:paddingLeft="@dimen/row_padding_left"
                android:paddingRight="@dimen/row_padding_right" >

                <TextView
                    style="@style/text_black_18"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_setting_about"
                    android:drawablePadding="4dp"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/text_about" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:src="@drawable/go" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TABLE4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@color/table_background"
            android:padding="@dimen/table_padding" >

            <Button
                android:id="@+id/layout_exit"
                style="@style/text_black_18"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_height"
                android:background="@drawable/row_selector"
                android:gravity="center_vertical|center"
                android:text="@string/text_exit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
